--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
 
-  "database": {
+
     "connectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\local;Database=Task Manger;Trusted_Connection=true"
+      "DefaultConnection": "Server=(localdb)\\local;Database=Task Manager;Trusted_Connection=true"
     }
   }
-}
+
 
 
